samples/_failures_safe/1761717674_0ac102_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_aa20535e.c: In function ‘main’:
./samples/SAFE/__tmp_aa20535e.c:155:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  155 |     for (enum compression_type type
      |               ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_aa20535e.c:155:15: error: expected declaration or statement at end of input
